--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
-    "prepack": "npm un build"
+    "prepack": "npm un build",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix"
   },
   "files": [
     "dist/js-web-framwork.js"
@@ -15,8 +17,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "eslint": "^9.28.0",
+    "jsdom": "^26.1.0",
     "rollup": "^4.42.0",
     "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-filesize": "^10.0.0"
+    "rollup-plugin-filesize": "^10.0.0",
+    "vitest": "^3.2.2"
   }
 }
