--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "dist/js-web-framwork.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
     "prepack": "npm un build",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "files": [
     "dist/js-web-framwork.js"
